create feature for edit

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<div class="col-lg-6 col-md-12">
+<!-- <div class="col-lg-6 col-md-12">
 	<div class="card card-nav-tabs">
 			<div class="card-header" data-background-color="purple">
 				<div class="nav-tabs-navigation">
@@ -260,4 +260,4 @@
 					</table>
 			</div>
 	</div>
-</div>
+</div> -->
