--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <base href="/">
   <meta charset="utf-8" />
+
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
   <title>Time Away Management</title>
@@ -22,7 +24,7 @@
     <!--     Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
-		<base href="/">
+    
 </head>
 
 <body>
@@ -105,7 +107,25 @@
       });
   </script>
   <!-- main -->
-	<script type="text/javascript" src="app.js"></script>
+
+  <script>
+  	'use strict';
+	var config = {
+	  apiKey: "AIzaSyBYxibiatzB0sUHIINexl6aLajydaVZbj4",
+	  authDomain: "timeaway-ddb73.firebaseapp.com",
+	  databaseURL: "https://timeaway-ddb73.firebaseio.com",
+	  projectId: "timeaway-ddb73",
+	  storageBucket: "timeaway-ddb73.appspot.com",
+	  messagingSenderId: "39745169337"
+	};
+	firebase.initializeApp(config);
+  
+	const ref = firebase.database().ref();
+  const employeeRef = ref.child('employee');
+  const teamRef = ref.child('team');
+  
+  </script>
+  <script type="text/javascript" src="app.js"></script>
   <script type="text/javascript" src="dashboard/DashboardCtrl.js"></script>
   <script type="text/javascript" src="employee/EmployeeCtrl.js"></script>
 
