--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,9 @@
   
   </script>
   <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="layout/layoutCtrl.js"></script>
   <script type="text/javascript" src="dashboard/DashboardCtrl.js"></script>
   <script type="text/javascript" src="employee/EmployeeCtrl.js"></script>
-
+  <script>
+  </script>
 </html>
